2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/main.cc (LY_DEFINE): add gmane address.

	* lily/beam.cc: remove calc_positions()

	* lily/include/grob.hh (class Grob): move pscore, dim_cache_,
	original_ in private scope.
	(class Grob): drop pscore_ pointer, change to output_def pointer.
	(class Grob): cleanup class definition.

	* ly/spanners-init.ly (assertBeamQuant): use make-simple-closure.

2005-11-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[__MINGW32__]: Do not assume argv0 is
	absolute.  Better diagnostics.

	* GNUmakefile.in: Add bin/ to tree and populate with some links.
	This makes lilypond run from the build directory using argv0
	relocation (without any --prefix or LILYPONDPREFIX setting).

2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): document new backend design.

	* scm/define-grobs.scm: purge self-[XY]-offset variables, replace
	with simple-closure.

	* lily/self-aligment-interface.cc (set_align_self): new function
	(set_center_parent): new function.

	* lily/side-position-interface.cc (set_axis): new function.

	* lily/new-fingering-engraver.cc (position_scripts): use drul for
	generic code. 

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove [XY]-offset-callbacks add [YX]-offset
	
2005-11-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Added space-alist
	entry for time signatures after breathing signs. Bug report by
	Scott Russell.

2005-11-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[!__MINGW32__]: Bugfix: if argv0 is
	not absolute, make it absolute using PATH.

2005-10-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* python/midi.c (initmidi): Fix type for mingw.

2005-10-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/compile-vars.make (SHARED_FLAGS): Support mingw.

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): Detect mingw
	cross compiling.
